feat: 복수 종목 호가 분리 시 이력을 남기고 재분석에 활용하는 기능 추가